--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Justin Merz <jrmerz@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "acl": "^0.4.8",
+    "acl": "^0.4.9",
+    "async": "^1.4.2",
     "bcrypt": "^0.8.5",
     "express-session": "^1.11.3",
+    "extend": "^3.0.0",
     "install": "^0.1.8",
     "npm": "^2.14.2",
     "passport": "^0.3.0",
