--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "express-session": "^1.11.3",
     "extend": "^3.0.0",
     "install": "^0.1.8",
+    "nodemailer": "^1.8.0",
     "npm": "^2.14.2",
     "passport": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "express": "^4.13.3",
