lots-o-updates, updating docs too

--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "async": "^1.4.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
+    "cookie-parser": "^1.4.0",
     "express-session": "^1.11.3",
     "extend": "^3.0.0",
-    "install": "^0.1.8",
+    "gitkitclient": "0.0.5",
+    "googleapis": "^2.1.7",
     "nodemailer": "^1.8.0",
-    "npm": "^2.14.2",
-    "passport": "^0.3.0",
-    "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
     "uuid": "^2.0.1"
   },
