--- a/sampleConfig.json
+++ b/sampleConfig.json
@@ -9,7 +9,7 @@
     "serviceAccountEmail": "",
     "serviceAccountPrivateKeyFile": "full/path/to/pem/file.pem",
     "widgetUrl": "http://localhost:8000/gitkit",
-    "cookieName": "gtoken"
+    "cookieName": "gtoken",
   },
   "signInWidget" : {
      "widgetUrl": "http://localhost:8000/gitkit",
